<resources>
    <string name="app_name">DreamCather</string>
    <string name="dream_title_label">Title</string>
    <string name="dream_title_text">Enter a title for the dream</string>
    <string name="dream_entries_label">ENTRIES</string>
    <string name="dream_fulfilled_checkbox">Fulfilled</string>
    <string name="dream_deferred_checkbox">Deferred</string>
    <string name="dream_entry_0_button">CONCEIVED</string>
    <string name="dream_entry_1_button">Date1</string>
    <string name="dream_entry_2_button">Date1</string>
    <string name="dream_entry_3_button">FULFILLED</string>
    <string name="dream_entry_4_button">DEFERRED</string>

    <string name="new_dream">New Dream</string>
    <string name="add_entry">Add New Antry</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="share_dream_title">>> %s &#60;&#60;</string>
    <string name="share_dream_head">This dream was conceived on %s.</string>
    <string name="share_reflections">Dream Reflections:</string>
    <string name="share_dream_end">This dream has been deferred.</string>

    <string name="share_dream_report">%1$s%2$s%3$s%4$s
    </string>
    <string name="share_dream_subject">Dream Report</string>
    <string name="send_report">Send dream report via</string>
</resources>