<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DreamDetailFragment"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="381dp"
        android:layout_height="694dp">

        <EditText
            android:id="@+id/dream_title_text"
            android:layout_width="245dp"
            android:layout_height="53dp"
            android:layout_marginTop="3dp"
            android:autofillHints=""
            android:hint="@string/dream_title_text"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/dream_fulfilled_checkbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dream_title_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="170dp">

        </LinearLayout>

        <TextView
            android:id="@+id/dream_details_label"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/dream_entries_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dream_fulfilled_checkbox" />


        <CheckBox
            android:id="@+id/dream_fulfilled_checkbox"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="108dp"
            android:layout_weight="1"
            android:text="@string/dream_fulfilled_checkbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.888"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dream_title_text" />

        <CheckBox
            android:id="@+id/dream_deferred_checkbox"
            android:layout_width="96dp"
            android:layout_height="46dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:text="@string/dream_deferred_checkbox"
            app:layout_constraintBottom_toTopOf="@+id/dream_details_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/dream_fulfilled_checkbox"
            app:layout_constraintTop_toBottomOf="@+id/dream_title_text"
            app:layout_constraintVertical_bias="0.4" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dream_entry_recycler_view"
            android:layout_width="382dp"
            android:layout_height="362dp"
            android:layout_marginBottom="164dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dream_details_label"
            app:layout_constraintVertical_bias="0.0"
            tools:context="edu.vt.cs.cs5254.dreamcatcher.DreamDetailFragment">


        </androidx.recyclerview.widget.RecyclerView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_reflection_button"
            android:layout_width="wrap_content"
            android:layout_height="282dp"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:contentDescription="@string/add_entry"
            android:src="@drawable/ic_icon_add_floating_foreground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.777" />

        <TextView
            android:id="@+id/dream_title_label"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="242dp"
            android:layout_height="33dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:text="@string/dream_title_label"
            app:layout_constraintBottom_toTopOf="@+id/dream_title_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dream_photo"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/dream_photo"
            android:layout_width="133dp"
            android:layout_height="130dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="7dp"
            app:layout_constraintBottom_toTopOf="@+id/dream_details_label"
            app:layout_constraintEnd_toStartOf="@+id/dream_title_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>